# osk

./: Cargo.toml  README.md
data/: global_badges.json
src/: main.rs
