[package]
name = "osk"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
anyhow          = "1.0.66"
eframe          = { version = "0.19.0", features = ["persistence"] }
egui            = { version = "0.19.0", default-features = false }
egui_extras     = { version = "0.19.0", features = ["image"] }
flume           = "0.10.14"
gumdrop         = "0.8.1"
image           = { version = "0.24.4", default-features = false, features = ["png", "jpeg", "gif"] }
once_cell       = "1.15.0"
regex           = "1.6.0"
reqwest         = { version = "0.11.12", features = ["json"] }
serde           = { version = "1.0.147", features = ["derive"] }
serde_json      = "1.0.87"
time            = { version = "0.3.15", features = ["local-offset", "formatting", "macros", "serde", "serde-well-known"] }
tokio           = { version = "1.21.2", features = ["rt-multi-thread", "sync", "net", "io-util", "macros"] }
tokio-stream    = "0.1.11"
url             = "2.3.1"
uuid            = { version = "1.2.1", features = ["v4", "serde"] }

[profile.dev.package.eframe]
opt-level = 3

[profile.dev.package.egui]
opt-level = 3

[profile.dev.package.egui_extras]
opt-level = 3

[profile.dev.package.image]
opt-level = 3

[patch.crates-io]
eframe      = { git = "https://github.com/museun/egui/", rev = "36920190db" }
egui        = { git = "https://github.com/museun/egui/", rev = "36920190db" }
egui-winit  = { git = "https://github.com/museun/egui/", rev = "36920190db" }
egui_extras = { git = "https://github.com/museun/egui/", rev = "36920190db" }
